// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text deve renderizar corretamente 1`] = `
<span
  class="css-1meovlr"
>
  Test 1
</span>
`;

exports[`Text deve renderizar corretamente 2`] = `
<p
  class="css-1meovlr"
>
  Test with p tag
</p>
`;

exports[`Text deve renderizar corretamente 3`] = `
<span
  class="css-1wltwh9"
>
  Test weight
</span>
`;

exports[`Text deve renderizar corretamente 4`] = `
<span
  class="css-tzv5vs"
>
  Test size
</span>
`;

exports[`Text deve renderizar corretamente 5`] = `
<span
  class="css-1jjmsa4"
>
  Test color
</span>
`;
